--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -3,6 +3,10 @@
   justify-content: center;
   align-items: center;
   padding: 5px 8px;
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+  top: 0;
 }
 .status-bar__coplumn {
   width: 33.3%;
