--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,8 +4,23 @@
   background-color: #fafafa;
   padding: 15px 0px;
   font-size: 16px;
+  margin-bottom: 15px;
 }
 
 #friends-display-link i {
   color: rgba(0, 0, 0, 0.3);
+}
+
+.friends-screen {
+  padding: 0 var(--horizontal-space);
+}
+.friend-screen__channel {
+  margin-top: 15px;
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
+}
+.friends-screen__channel-header {
+  padding: 15px 0 25px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
 }
