--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,9 +1,13 @@
-.user-component {
-  display: flex;
-}
+.user-component,
 .user-component__column:first-child {
   display: flex;
   align-items: center;
+}
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+}
+.user-component {
+  justify-content: space-between;
 }
 .user-component__avatar {
   width: 70px;
@@ -20,4 +24,16 @@
   margin-top: 8px;
   font-size: 17px;
   color: rgba(0, 0, 0, 0.5);
+}
+.user-component__avatar--xl {
+  width: 80px;
+  height: 80px;
+}
+.user-component__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 25px;
+}
+.user-component__title--not-bold {
+  font-weight: 400;
 }
