--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -4,7 +4,10 @@
   align-items: center;
 }
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 .user-component {
   justify-content: space-between;
@@ -36,4 +39,8 @@
 }
 .user-component__title--not-bold {
   font-weight: 400;
+}
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
 }
