--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,14 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
+}
+.main-screen {
+  padding: 0 var(--horizontal-space);
 }
