--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -94,3 +94,22 @@
 .open-post__heart-count span {
   margin-left: 5px;
 }
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: firebrick;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__heart-count i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
+}
