--- a/css/components/no-mobile.css
+++ b/css/components/no-mobile.css
@@ -12,7 +12,7 @@
   top: 0;
 }
 
-@media screen and (max-width: 645px) and (orientation: landscape) {
+@media screen and (max-width: 645px) {
   #no-mobile {
     display: none;
   }
